# Q_Lab

./: .env.example  .gitignore  Makefile  README.md  prepare.py  program.md  pyproject.toml  results.tsv  strategy.py
config/examples/: crypto_event_features.toml  hyperliquid_paper.toml  mvp.toml
src/q_lab/: __init__.py  __main__.py  cli.py  config.py  features.py  git_utils.py  leaderboard.py  models.py  runner.py  scheduler.py  store.py
src/q_lab/adapters/: __init__.py  hyperliquid.py
src/q_lab/evaluators/: __init__.py  base.py  deterministic.py
tests/: test_feature_sources.py  test_git_utils.py  test_hyperliquid_adapter.py  test_prepare.py  test_runner.py  test_scheduler.py  test_store_and_leaderboard.py
