[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-lab"
version = "0.1.0"
description = "MVP autonomous quant experiment OS (paper-trading only)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Q_Lab" }]
dependencies = []

[project.scripts]
q-lab = "q_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
